# cvhub-ocr

./: README.md  pyproject.toml
proto/: ocr_pb2.py  ocr_pb2_grpc.py
src/: models.py  server.py
src/config/: config.yml  config_loader.py
src/detector/: base_detector.py  paddle_detector.py
src/engine/: base_engine.py  engine_factory.py
src/recognizer/: base_recognizer.py  paddle_recognizer.py
src/utils/: utils.py
tests/intergration/: conftest.py  test_paddle_detector_load.py  test_paddle_recognizer_load.py
tests/unit/: test_config_loader.py
